fixed styling to properly handle overflow

--- a/src/component/MasterContainer/MasterContainer.css
+++ b/src/component/MasterContainer/MasterContainer.css
@@ -15,5 +15,5 @@
 .master-wrapper {
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
