--- a/src/component/TasklistManagement/TaskCard/TaskCard.css
+++ b/src/component/TasklistManagement/TaskCard/TaskCard.css
@@ -1,31 +1,26 @@
-.task-delete {
-  width: 5%;
-  border: none;
-  border-left: 1px solid grey;
+.task-card {
+  z-index: 1;
 }
-
+.info-cell {
+  width: 96%;
+}
+.delete-cell {
+  width: 4%;
+  min-width: 0 !important;
+}
+.delete-cell > button,
+.info-cell > button {
+  height: 24px;
+  width: 100%;
+  min-width: 0 !important;
+}
 .task-button {
-  width: 95%;
-  border: none;
-  padding-left: 15px;
   justify-content: flex-start !important;
   text-transform: none !important;
 }
-
-.task-card {
-  height: 20px;
-  display: flex;
-  flex-direction: row;
-  align-content: flex-start;
-  margin: auto;
-  border-bottom: 1px solid rgb(158, 169, 177);
-  z-index: 1;
+.task-delete {
+  padding: 0 !important;
 }
-
-.task-card-btn-grp {
-  width: 100%;
-}
-
 .delete-icon {
   font-size: 1.3rem !important;
 }
